fix deploy
